Use variables and fix svg alignments

--- a/packages/patternfly-4/src/pages/footer.scss
+++ b/packages/patternfly-4/src/pages/footer.scss
@@ -27,7 +27,7 @@ $block: '.pf4';
     padding-left: var(--pf-global--spacer--sm);
     border-right: var(--pf-global--BorderWidth--sm) solid #d2d2d2;
     color: #d2d2d2;
-    text-decoration: var(--pf-global--link--TextDecoration);
+    text-decoration: underline;
     &:first-of-type {
       padding-left: 0;
     }
